# CRISPR-millipede-target

./: Dockerfile  README.md  pyproject.toml
crispr_millipede/: __init__.py
crispr_millipede/encoding/: CrisprMillipedeEncoding.py  __init__.py  encoding.py
crispr_millipede/modelling/: CrisprMillipedeModelling.py  __init__.py  allele_visualization.py  board_plot_visualization.py  defaults.py  models_inputs.py  models_processing.py  models_visualization.py  pydeseq.py  utility.py
crispr_millipede/utility/: utility.py
crispr_millipede/visualization/: CrisprMillipedeVisualization.py  __init__.py  allele_visualization.py  models_visualization.py
notebooks/: CD19_sgRNA_count_libraries_DS.txt  CRISPR_SURF_Demo.ipynb  JDG_Track_Plotting_Demo.ipynb  STEP1_ABE8e_CRISPResso2_Demo.ipynb  STEP1_EvoCDA_CRISPResso2_Demo.ipynb  STEP1_sg218_Crispresso2_Demo.ipynb  STEP1_sg218_Encoding_Demo.ipynb  STEP2_ABE8e_EvoCDA_Encoding_Demo.ipynb  STEP3_EvoCDA_Millipede_Demo.ipynb  STEP3_sg219_Crispresso2_Demo.ipynb  STEP4_ABE8e_DESeq2_Demo.ipynb  STEP4_ABE8e_EvoCDA_sg218_Boardplots.ipynb  STEP4_EvoCDA_DESeq2_Demo.ipynb  STEP5_ABE8e_DESeq2_Demo.ipynb  STEP5_EvoCDA_DESeq2_Demo.ipynb  STEP8_sg218_Millipede_Demo.ipynb
notebooks/.ipynb_checkpoints/: STEP1_sg218_Crispresso2_Demo 1-checkpoint.ipynb  STEP2_sg218_Encoding_Demo 2-checkpoint.ipynb  STEP3_ABE8e_Millipede_Demo-checkpoint.ipynb  STEP3_sg218_Millipede_Demo-checkpoint.ipynb  STEP4_ABE8e_EvoCDA_sg218_Boardplots-checkpoint.ipynb
